<resources>
    <string name="app_name">Login Part</string>
    <string name="login"> Login </string>
    <string name="signin"> SIGN IN </string>
    <string name="next"> NEXT </string>
    <string name="user"> Enter Username </string>
    <string name="username"> Username </string>
    <string name="pass"> Enter Password </string>
    <string name="password"> Password </string>
    <string name="contact"> Phone Number </string>
    <string name="fullname"> Full Name</string>
    <string name="forget_pass"> Forget Password </string>
    <string name="new_acc"> Create Account </string>
    <string name="remember_me"> Remember Me </string>
    <string name="enter_name"> Enter Name </string>
    <string name="email"> Email </string>
</resources>